--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "styled-components": "^4.1.3"
+    "react-spring": "^8.0.14",
+    "styled-components": "^4.1.3",
+    "styled-reboot": "^3.0.2"
   },
   "keywords": [
     "gatsby"
@@ -33,6 +35,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.14.2"
   },
   "repository": {
