--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-source-graphql": "^2.0.6",
+    "gatsby-source-twitter": "^2.0.0",
     "gatsby-source-wordpress": "^3.0.13",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.4",
