--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "dotenv": "^7.0.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.14.2"
   },
