--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "k-matsunaga",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
+    "date-fns": "^1.30.1",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-google-analytics": "^2.0.17",
