--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.7",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-remark-code-titles": "^1.1.0",
+    "gatsby-remark-prismjs": "^3.3.16",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-source-graphql": "^2.0.15",
     "gatsby-source-twitter": "^2.0.0",
     "gatsby-source-wordpress": "^3.0.13",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.4",
+    "prismjs": "^1.17.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
